--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       font-family: Arial, sans-serif;
       font-weight: bold;
       background-color: #f0f0f0;
+      font-size: 10vw; /* Ukuran teks fleksibel dan besar */
     }
   </style>
 </head>
